<resources>
    <string name="app_name">CharBuilder</string>
    <string name="title">Das ist ein Titel</string>
    <string name="description">und das nicht</string>
    <string name="title_activity_main_navigation_drawer">CharBuilder</string>
    <string name="cancel">Abbrechen</string>
    <string name="confirm">Bestätigen</string>
    <string name="dialog_ok">OK</string>

    <!-- Main Navigation Drawer Menu -->
    <string name="action_settings">Einstellungen</string>
    <string name="characters">Charaktere</string>
    <string name="rulesets">Regelwerke</string>
    <string name="importExport">Import/Export</string>
    <string name="dices">Würfeltool</string>

    <!-- Character Creation Cancel Dialog -->
    <string name="cancel_creation_dialog_message">Möchten sie die Erstellung wirklich abbrechen?
        Alle nicht gespeicherten Daten gehen verloren.</string>
    <string name="cancel_creation_dialog_title">Erstellung abbrechen</string>
    <string name="cancel_dialog_yes">Ja</string>
    <string name="cancel_dialog_no">Nein</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="title_activity_char_creation">CharCreation</string>
    <string name="title_activity_char_creation_controller">CharCreationController</string>
    <string name="title_activity_settings_controller">CharCreationController</string>
    <string name="section_format">Hello World from section: %1$d</string>

    <string name="character">Charakter</string>

    <!-- Character Creation Steps -->
    <string name="cc_obligation">Pflicht</string>
    <string name="cc_species">Spezies</string>
    <string name="cc_career">Beruf</string>
    <string name="cc_specialization">Spezialisierung</string>
    <string name="cc_experience">Erf. Punkte</string>
    <string name="cc_attributes">Attribute</string>
    <string name="cc_motivation">Motivation</string>
    <string name="cc_appearance">Aussehen</string>
    <string name="cc_skills">Skills</string>
    <string name="cc_gear">Ausrüstung</string>
    <string name="cc_completion">Abschluss</string>

    <string name="selected_obligation">Ausgewählte Pflicht</string>
    <string name="second_selected_obligation">Zweite Pflicht</string>
    <string name="random_obligation_button">Zufällige Pflicht</string>
    <!-- Character Creation Obligation Types-->
    <string name="obligation_addiction">Sucht</string>
    <string name="obligation_betrayal">Verrat</string>
    <string name="obligation_blackmail">Erpressung</string>
    <string name="obligation_bounty">Kopfgeld</string>
    <string name="obligation_criminal">Kriminalität</string>
    <string name="obligation_debt">Schulden</string>
    <string name="obligation_dutybound">Pflichtbewusstsein</string>
    <string name="obligation_family">Familie</string>
    <string name="obligation_favor">Gefälligkeit</string>
    <string name="obligation_oath">Eid</string>
    <string name="obligation_obsession">Besessenheit</string>
    <string name="obligation_responsibility">Verantwortung</string>

    <string name="selected_motivation">Ausgewählte Motivation</string>
    <string name="second_selected_motivation">Zweite Motivation</string>
    <string name="random_motivation_button">Zufällige Motivation</string>
    <!-- Character Creation Motivation Ambitions-->
    <string name="ambition">Zielsetzung</string>
    <string name="ambition_friendship">Freundschaft</string>
    <string name="ambition_love">Liebe</string>
    <string name="ambition_freedom">Freiheit</string>
    <string name="ambition_fame">Berühmtheit</string>
    <string name="ambition_greed">Gier</string>
    <string name="ambition_status">Ansehen</string>
    <string name="ambition_expertise">Expertise</string>
    <string name="ambition_wanderlust_novelty">Fernweh / Neuheit</string>
    <string name="ambition_power">Macht</string>
    <string name="ambition_religion_spirituality">Religion / Spiritualität</string>

    <!-- Character Creation Motivation Cause-->
    <string name="cause">Beweggrund</string>
    <string name="cause_religion_spirituality">Religion / Spiritualität</string>
    <string name="cause_theweak_charity">Die Schwachen / Wohltätigkeit</string>
    <string name="cause_nonhuman_rights">Nichtmenschliche Rechte</string>
    <string name="cause_local_politics">Lokale Politik</string>
    <string name="cause_overthrow_the_empire">Sturz des Imperiums</string>
    <string name="cause_crime">Kriminalität</string>
    <string name="cause_emancipation">Gleichberechtigung</string>
    <string name="cause_droid_rights">Droiden Rechte</string>
    <string name="cause_capitalism">Kapitalismus</string>
    <string name="cause_support_the_empire">Unterstüzung des Imperiums</string>

    <!-- Character Creation Motivation Relationship-->
    <string name="relationship">Bindung</string>
    <string name="relation_place_of_origin">Herkunftsort</string>
    <string name="relation_pet">Haustier</string>
    <string name="relation_childhood_friend">Kindheitsfreund</string>
    <string name="relation_comrades">Kameraden</string>
    <string name="relation_siblings">Geschwister</string>
    <string name="relation_mentor">Mentor</string>
    <string name="relation_parents">Eltern</string>
    <string name="relation_extended_family_clan">Erweiterte Familie / Clan</string>
    <string name="relation_droid_companion">Droiden Gefährte</string>
    <string name="relation_former_nemesis">Ehemaliger Erzfeind</string>

    <!-- Character Creation Species Dialog -->
    <string name="species_info_dialog_title">Spezies Information</string>
    <string name="species">Ausgewählte Spezies:</string>
    <string name="species_none">Keine</string>

    <!-- Character Creation Career -->
    <string name="career_selected">Ausgewählter Beruf:</string>
    <string name="career_none">Keiner</string>

    <!-- Character Creation Appearance-->
    <string name="appearance_gender">Geschlecht:</string>
    <string name="appearance_birthday">Geburtstag:</string>
    <string name="appearance_age">Alter:</string>
    <string name="appearance_height">Größe:</string>
    <string name="appearance_weight">Gewicht:</string>
    <string name="appearance_haircolor">Haar-/Fellfarbe:</string>
    <string name="appearance_eyecolor">Augenfarbe:</string>
    <string name="appearance_skincolor">Hautfarbe:</string>
    <string name="appearance_features">Besondere Merkmale:</string>

    <!-- Character Creation Gear -->
    <string name="gear_weapon_name">Waffe</string>
    <string name="gear_weapon_damage">Schaden</string>
    <string name="gear_item">Ausrüstung</string>
    <string name="gear_comment">Anmerkung</string>
    <string name="gear_credits">Credits</string>
    <string name="gear_hint_lightsaber">Lichtschwert</string>
    <string name="gear_damage_example">5 + W</string>
    <string name="gear_hint_stimpack">2 Stimpacks</string>
    <string name="gear_hint_comment">Heilt 4 Wunden</string>

    <!-- Char Creation Completion -->
    <string name="complete_charcreation">Charaktererstellung\n abschließen</string>
    <string name="character_name">Name des Charakters</string>
    <string name="dialog_missing_values_title">Fehlende Werte</string>
    <string name="dialog_missing_values_string">Zum Abschluss fehlen folgende Werte:\n</string>

    <!-- Preferences -->
    <string name="pref_general_title">Allgemein</string>
    <string name="pref_design_title">Aussehen</string>
    <string name="pref_design_themelist">Farbe</string>
    <string name="pref_design_themelist_summary">Das Grundfarbschema der App</string>

    <!-- Dice Tool -->
    <string name="dice_available_title">Verfügbare Würfel</string>
    <string name="dice_selected_title">Ausgewählte Würfel</string>
    <string name="button_roll_dice">Würfeln</string>
    <string name="button_roll_history">Verlauf anzeigen</string>
    <string name="dice_result">Ergebnis</string>
    
    <!-- Char Details -->
    <string name="title_activity_char_details_controller">CharDetailsController</string>
    <string name="cd_general">Allgemein</string>
    <string name="cd_general_info">Allgemeine Informationen</string>
    <string name="cancel_details_dialog_message">Möchten sie die Bearbeitung wirklich abbrechen?
        Alle nicht gespeicherten Daten gehen verloren.</string>
    <string name="cancel_details_dialog_title">Bearbeitung abbrechen</string>

    <!-- Char Details Attributes-->
    <string name="attribute_brawn">Stärke</string>
    <string name="attribute_agility">Gewandheit</string>
    <string name="attribute_intellect">Intelligenz</string>
    <string name="attribute_cunning">List</string>
    <string name="attribute_willpower">Willenskraft</string>
    <string name="attribute_presence">Charisma</string>
    <string name="attribute_woundthreshold">Wundschwelle</string>
    <string name="attribute_strainthreshold">Erschöpfungsschwelle</string>
    <string name="attribute_defense">Verteidigung</string>
    <string name="attribute_soakvalue">Absorption</string>
    
    <!-- Import/Export -->
    <string name="importing">Herunterladen</string>
    <string name="exporting">Hochladen</string>
    <string name="local_chars">Lokale Charaktere</string>
    <string name="cloud_chars">Cloud Charaktere</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="back">Zurück</string>
    <string name="signup">Registrieren</string>
    <string name="signup_message">Noch keinen Account? Jetzt <a href="#">registrieren!</a></string>
    <string name="usersettings">Benutzerverwaltung</string>
    <string name="iesettings">Funktionen</string>
    <string name="resetpw">Password zurücksetzen</string>
  
    <!-- Skill -->
    <string name="add_skill">Skill hinzufügen</string>
    <string name="name">Name:</string>
    <string name="skill_description">Beschreibung:</string>
    <string name="skill_edit_dialog_title">Skill bearbeiten</string>
    <string name="complete_skill_edit">Änderungen übernehmen</string>

    <!-- Welcome -->
    <string name="character_count">verschiedene Charaktere</string>
    <string name="dice_throw_count">sind die Würfel gefallen</string>
    <string name="credit_count">Credits insgesamt</string>
    <string name="favorite_species">lieblings Spezies</string>
    <string name="welcome_message_title">Willkommen!</string>
    <string name="quickstart_menu_title">Schnellauswahl:</string>
    <string name="quickstart_create_character">Neuen Charakter erstellen</string>
    <string name="quickstart_dice_tool">Würfeln</string>
    <string name="welcome_message_end">Weiter unten kannst du noch ein paar Statistiken einsehen.</string>
    <string name="welcome_message_text">Dies ist eine App um dir deine eigenen Charaktere für dein lieblings Star Wars - Rollenspiel zu erstellen!</string>
</resources>
