<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="right">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/skill_edit_dialog_title"
        android:textColor="@color/colorBlack"
        android:textSize="20sp" />
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/name"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_skill_namedg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/skill_description"
        android:textColor="@color/colorBlack"
        android:textSize="15sp" />

    <EditText
        android:id="@+id/et_skill_descdg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"/>
    
    <Button
        android:id="@+id/completeSkillButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10sp"
        android:text="@string/complete_skill_edit"/>

</LinearLayout>