<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:card_View="http://schemas.android.com/apk/res-auto">

    <android.support.v7.widget.CardView
        android:id="@+id/general_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        card_View:cardElevation="10sp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/general_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cd_general_info"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"/>
            <LinearLayout
                android:id="@+id/general_textview_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_below="@+id/general_info">
                <TextView
                    android:id="@+id/general_species"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/cc_species"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_career"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/cc_career"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_specialization"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/cc_specialization"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_obligation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/cc_obligation"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_obligation2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/second_selected_obligation"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_motivation1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/cc_motivation"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_motivations2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/second_selected_motivation"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/general_textview_layout"
                android:layout_below="@id/general_info">
                <TextView
                    android:id="@+id/general_species_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_career_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    />
                <TextView
                    android:id="@+id/general_specialization_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_obligation1_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_obligation2_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_motivation1_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/general_motivation2_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>

            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
    <android.support.v7.widget.CardView
        android:id="@+id/attribute_info_card"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5sp"
        card_View:cardElevation="10sp"
        android:layout_below="@id/general_info_card">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp">

            <TextView
                android:id="@+id/attribute_info"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cc_attributes"
                android:textColor="@color/colorBlack"
                android:textSize="20sp"/>

            <LinearLayout
                android:id="@+id/attribute_textview_layout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="5dp"
                android:layout_below="@+id/attribute_info">
                <TextView
                    android:id="@+id/attribute_brawn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_brawn"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_agility"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_agility"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_intellect"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_intellect"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_cunning"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_cunning"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_willpower"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_willpower"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_presence"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_presence"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_woundthreshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_woundthreshold"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_strainthreshold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_strainthreshold"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_defense"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_defense"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_soakvalue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:text="@string/attribute_soakvalue"
                    android:textSize="15sp"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_toEndOf="@+id/attribute_textview_layout"
                android:layout_below="@id/attribute_info">
                <TextView
                    android:id="@+id/attribute_brawn_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_agility_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_intellect_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_cunning_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_willpower_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_presence_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_woundthreshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_strainthreshold_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_defense_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
                <TextView
                    android:id="@+id/attribute_soakvalue_value"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@color/colorBlack"
                    android:textSize="15sp"/>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>

</RelativeLayout>