<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.chrisphil.charbuilder.importExportFragments.ExportFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorPrimary"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10sp"
            android:layout_marginTop="10sp"
            android:text="@string/local_chars"
            android:textColor="@color/colorWhite"
            android:textSize="20sp" />

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:layout_weight="4"
            android:paddingLeft="10dp">

                <ListView xmlns:android="http://schemas.android.com/apk/res/android"
                    android:id="@+id/listviewOffline"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
        </android.support.v7.widget.CardView>

        <Button
            android:id="@+id/export_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/exporting"/>

        <Button
            android:id="@+id/back_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp"
            android:text="@string/back"/>

    </LinearLayout>

</FrameLayout>
